# hdt-cpp

./: configure.ac
libhdt/: Makefile.am
libhdt/benchmarks/: LUBM.sh  README.md  bench_hdtCat.sh  bench_rdf2hdt.sh  clearAll.sh  getMaxMemFromTop.sh  hdtCat.sh  parse_time_log.sh  runAll.sh
libhdt/benchmarks/src/: HDTCat.cpp  HDTgeneration.cpp  HDTsearch.cpp  Makefile.am
libhdt/benchmarks2/: bench_hdtCat.sh  bench_lubm.sh  bench_rdf2hdt.sh  parse_time_log.sh
libhdt/benchmarks2/lubm/: copy.sh  lubm.sh
libhdt/include/: HDTEnums.hpp  HDTManager.hpp  Header.hpp
libhdt/src/bitsequence/: BitSequenceRoaring.cpp  BitSequenceRoaring.h  roaring.c  roaring.h  roaring.hh
libhdt/src/dictionary/: FSDCatIterators.cpp  FSDCatIterators.hpp  FourSectionDictionary.cpp  FourSectionDictionary.hpp  FourSectionDictionaryCat.cpp  FourSectionDictionaryCat.hpp
libhdt/src/hdt/: BasicHDT.cpp  BasicHDT.hpp  HDTCat.cpp  HDTCat.hpp  HDTManager.cpp
libhdt/src/sequence/: LogSequence2Disk.cpp  LogSequence2Disk.hpp
libhdt/src/triples/: BitmapTriples.cpp  BitmapTriples.hpp  BitmapTriplesCat.cpp  BitmapTriplesCat.hpp  predicateindex.cpp  predicateindex.hpp
libhdt/src/util/: SizeTArrayDisk.cpp  SizeTArrayDisk.hpp  catcommon.cpp  catcommon.hpp  catiterator.cpp  catiterator.hpp  catmapping.cpp  catmapping.hpp  catmappingBack.cpp  catmappingBack.hpp
libhdt/tools/: Makefile.am  hdtCat.cpp
